-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2011-09-21	fwobbe
	* gmtconvert.c:		Prevent memory access violation in GMT_report
	* pswiggle.txt:		Removed old option -N from synopsis

2011-09-21	remko
	* common_options.txt:	Added missing -Xf, -Yf
	* pscoast.c:		Set default fill colour to same as set by -B+g
	* test/pscoast/{placement,pseudo}.sh:	New tests by Ken McLean

2011-09-20	pwessel
	* meca:			Added missing -A to the synopsis of psvelo.c

2011-09-20	fwobbe
	* {dbase,gshhs,imgsrc,meca,mgd77,potential,segyprogs,sph,spotter,x2sys,}Makefile:
				Add rm -rf *.dSym to clean targets. Do not generate dSYM
				files in bindir and libdir: dsymutil cannot create symbol
				files without object file present (CC invoked without -c).
	* gmt_gdalwrite.c:	Avoid tiling small GTiffs

2011-09-18	remko
	* grdimage.c:		Avoid segfault when not reading grid through GDAL.
				(Thanks, Florian)

2011-09-15	remko
	* gmt_init.c:		Produce error report when non-common option found by
				GMT_default_error.
	* *_func.c:		Renamed to *.c

2011-09-15	pwessel
	* *.c:			Change module interface to one flavor:
				GMT_module (API, mode, args) to avoid having separate
				GMT_module and GMT_module_cmd wrappers.  This eliminates
				the need for the gmt_module.c and gmt_<suppl>.c files.

2011-09-12	remko
	* configure.ac:		Do not unnecessarily overrule CFLAGS.

2011-09-08	remko
	* ps2raster_func.c:	Add -TE option to include /PageSize in EPS.

2011-08-30	jluis
	* gmt_plot.h:		More Voodoo. If the "char string[GMT_TEXT_LEN64];" 
				is not the first member in the GMT_SYMBOL struct than 
				psxy -Sl<size>/Text will have corrupt 'Text'in non-debug 
				binaries compiled with VS2010. 

2011-08-29	remko
	* gmt_init.c gmt_error.h:	Let GMT_report product return value of 1.
	* configure.ac:		When --includedir is specified, do not automatically add /gmt.
